# AprilFTP

./: .depend  CMakeLists.txt  Makefile  README.md
client/: .depend  CMakeCache.txt  CliDTP.cpp  CliDTP.h  CliPI.cpp  CliPI.h  Client.cpp  UI.cpp  UI.h  client.out
common/: Common.cpp  Common.h  Database.cpp  Database.h  Error.cpp  Error.h  PI.h  Packet.cpp  Packet.h  SockStream.cpp  SockStream.h  Socket.cpp  Socket.h  Sockstream.h
server/: Makefile  Server.cpp  Server.h  SrvDTP.cpp  SrvDTP.h  SrvPI.cpp  SrvPI.h  server.h  server.out
